made it work with easywsclient but it's crashing Unity. gah. websockets can be finicky.

--- a/Unix/Makefile
+++ b/Unix/Makefile
@@ -123,6 +123,19 @@ hydra-plugin/fast:
 	$(MAKE) -f CMakeFiles/hydra-plugin.dir/build.make CMakeFiles/hydra-plugin.dir/build
 .PHONY : hydra-plugin/fast
 
+#=============================================================================
+# Target rules for targets named easywsclient
+
+# Build rule for target.
+easywsclient: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 easywsclient
+.PHONY : easywsclient
+
+# fast build rule for target.
+easywsclient/fast:
+	$(MAKE) -f easywsclient/CMakeFiles/easywsclient.dir/build.make easywsclient/CMakeFiles/easywsclient.dir/build
+.PHONY : easywsclient/fast
+
 hydra-plugin.o: hydra-plugin.cpp.o
 
 .PHONY : hydra-plugin.o
@@ -159,6 +172,7 @@ help:
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
 	@echo "... hydra-plugin"
+	@echo "... easywsclient"
 	@echo "... hydra-plugin.o"
 	@echo "... hydra-plugin.i"
 	@echo "... hydra-plugin.s"
